2003-01-02  olicha  <olivier.chapuis@free.fr>

	* fvwm/fvwm.1.in:
	Documented  the new icon style options
		
	* fvwm/fvwm.h:
	* fvwm/icons.h:
	* fvwm/icons.c (DrawIconTitleWindow):
	(DrawIconPixmapWindow):
	(setup_icon_title_size):
	* fvwm/style.c (style_parse_one_style_option):
	Fixed Icon{Title,Background}Relief arguments

	* fvwm/icons.c (GetIconPicture):
	(SetIconPixmapSize):
	Fixed IconSize style for non shaped depth > 1 pixmaps

2002-01-02  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	* fvwm/commands.h:
	* fvwm/conditional.c (CMD_On):
	* fvwm/functable.c:
	* fvwm/fvwm.1.in:
	new conditional command On for non-window related conditions

	* fvwm/execcontext.h:
	* fvwm/fvwm.c (Done, SetRCDefaults, StartupStuff):
	two new exec contexts for restarting

2003-01-02  olicha  <olivier.chapuis@free.fr>

	* fvwm/builtins.c (ReadMultiPixmapDecor):
	StretchedPixmap -> AdjustedPixmap

	* fvwm/fvwm.1.in:
	Documented Colorset in BorderStyle, TitleStyle and ButonsStyle
	Documented the new MultiPixmap syntax

2002-12-31  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	* fvwm/fvwm.1.in:
	* fvwm/builtins.c (ReadTitleButton):
	* fvwm/screen.h:
	new button state shortcuts AllActiveUp, AllActiveDown,
	AllInactiveUp, AllInactiveDown

2002-12-31  olicha  <olivier.chapuis@free.fr>

	* libs/PictureGraphics.c (PCopyArea):
	Fixed rendering of depth 1 pixmap with a mask

	* fvwm/update.c (apply_window_updates):
	Fixed icon bg cset update

	* fvwm/events.c (HandlePropertyNotify):
	* fvwm/geometry.c (move_icon_to_position):
	Fixed non shaped icons with a bg padding but without cs bg

	* NEWS:
	* fvwm/style.c (style_parse_icon_size_style):
	(merge_styles):
	* fvwm/fvwm.h (window_style):
	* fvwm/add_window.c (setup_icon_size_limits):
	* fvwm/icons.c (SetIconPixmapSize):
	(GetIconPicture):
	New option to IconSize style: Adjusted, Streched, Shrunk

	* fvwm/icons.c (SetIconPixmapSize):
	(GetIconPicture):
	Always center the icon with IconSize if the icon has a background
